--- a/packages/elvis/percy/components/label.html
+++ b/packages/elvis/percy/components/label.html
@@ -18,10 +18,19 @@
 
     <div class="e-title-xs e-my-16">Colored</div>
     <div>
-      <label class="e-label e-label--green e-m-8">Ny</label>
-      <label class="e-label e-label--red e-m-8">Farlig</label>
-      <label class="e-label e-label--orange e-m-8">Advarsel</label>
-      <label class="e-label e-label--blue-berry e-m-8">Info</label>
+      <label class="e-label e-label--grey e-m-8">Grey</label>
+      <label class="e-label e-label--black e-m-8">Black</label>
+      <label class="e-label e-label--white e-m-8">White</label>
+      <label class="e-label e-label--green e-m-8">Green</label>
+      <label class="e-label e-label--red-tomato e-m-8">Red-tomato</label>
+      <label class="e-label e-label--orange-mango e-m-8">Orange-mango</label>
+      <label class="e-label e-label--purple-plum e-m-8">Purple-plum</label>
+      <label class="e-label e-label--blue-berry e-m-8">Blue-berry</label>
+      <label class="e-label e-label--violet-grape e-m-8">Violet-grape</label>
+      <label class="e-label e-label--green-apple e-m-8">Green-apple</label>
+      <label class="e-label e-label--red e-m-8">Red</label>
+      <label class="e-label e-label--orange e-m-8">Orange</label>
+      <label class="e-label e-label--yellow e-m-8">Yellow</label>
     </div>
   </body>
 </html>
