--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -24,19 +24,19 @@
             <th scope="row">Januar 2020</th>
             <td>Sendt</td>
             <td class="e-text-right">567,98 kr</td>
-            <td class="e-text-right">123456</td>
+            <td class="e-text-right e-text-mono">123456</td>
           </tr>
           <tr>
             <th scope="row">Februar 2020</th>
             <td>Betalt</td>
             <td class="e-text-right">543,10 kr</td>
-            <td class="e-text-right">123456</td>
+            <td class="e-text-right e-text-mono">123456</td>
           </tr>
           <tr>
             <th scope="row">Mars 2020</th>
             <td>Betalt</td>
             <td class="e-text-right">568,98 kr</td>
-            <td class="e-text-right">123456</td>
+            <td class="e-text-right e-text-mono">123456</td>
           </tr>
         </tbody>
       </table>
@@ -115,7 +115,7 @@
           <tr>
             <th scope="col">Periode</th>
             <th scope="col">Status</th>
-            <th scope="col" class="e-text-right">Beløp</th>
+            <th scope="col" class="e-text-right">Beløp (kr)</th>
             <th scope="col" class="e-text-right">Faktura nr.</th>
           </tr>
         </thead>
@@ -123,20 +123,20 @@
           <tr>
             <th scope="row">Januar 2020</th>
             <td>Sendt</td>
-            <td class="e-text-right">567,98 kr</td>
-            <td class="e-text-right">123456</td>
+            <td class="e-text-right e-text-mono">567,98</td>
+            <td class="e-text-right e-text-mono">123456</td>
           </tr>
           <tr>
             <th scope="row">Februar 2020</th>
             <td>Betalt</td>
-            <td class="e-text-right">543,10 kr</td>
-            <td class="e-text-right">123456</td>
+            <td class="e-text-right e-text-mono">543,10</td>
+            <td class="e-text-right e-text-mono">123456</td>
           </tr>
           <tr>
             <th scope="row">Mars 2020</th>
             <td>Betalt</td>
-            <td class="e-text-right">568,98 kr</td>
-            <td class="e-text-right">123456</td>
+            <td class="e-text-right e-text-mono">568,98</td>
+            <td class="e-text-right e-text-mono">123456</td>
           </tr>
         </tbody>
       </table>
@@ -331,8 +331,8 @@
           </tr>
           <tr>
             <th scope="row" class="e-table__cell--multiline-small">
-              This cell exceeds 250px in width, so the class 'e-table__cell--multiline--small' can be added
-              for smaller columns.
+              This cell exceeds 250px in width, so the class 'e-table__cell--multiline-small' can be added for
+              smaller columns.
             </th>
             <td>Betalt</td>
             <td class="e-text-right">568,98 kr</td>
@@ -427,7 +427,7 @@
           <tr>
             <td>Elvia Elviaveien 3, 1234 Oslo</td>
             <td>15.01.2021</td>
-            <td class="e-table__buttons">
+            <td class="e-table__button">
               <button class="e-btn e-btn--icon">
                 <span class="e-btn__icon"><i class="e-icon e-icon--edit" aria-hidden="true"></i></span>
               </button>
@@ -439,7 +439,7 @@
           <tr>
             <td>Elvia Elviaveien 3, 1234 Oslo</td>
             <td>15.01.2021</td>
-            <td class="e-table__buttons">
+            <td class="e-table__button">
               <button class="e-btn e-btn--icon">
                 <span class="e-btn__icon"><i class="e-icon e-icon--edit" aria-hidden="true"></i></span>
               </button>
