--- a/packages/elvis/percy/components/toggle.html
+++ b/packages/elvis/percy/components/toggle.html
@@ -25,6 +25,15 @@
       Disabled on
       <input class="e-toggle__input" type="checkbox" checked disabled />
     </label>
+    <div class="e-title-xs e-my-16">Pseudos</div>
+    <label class="e-toggle e-toggle---checked e-mt-16" role="switch">
+      Checked
+      <input class="e-toggle__input" type="checkbox" />
+    </label>
+    <label class="e-toggle e-toggle---focus e-mt-16" role="switch">
+      Focus
+      <input class="e-toggle__input" type="checkbox" />
+    </label>
     <div class="e-bg-grey">
       <label class="e-toggle e-toggle--inverted" role="switch">
         Off
@@ -41,6 +50,15 @@
       <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
         Disabled on
         <input class="e-toggle__input" type="checkbox" checked disabled />
+      </label>
+      <div class="e-title-xs e-my-16">Pseudos</div>
+      <label class="e-toggle e-toggle--inverted e-toggle---checked e-mt-16" role="switch">
+        Checked
+        <input class="e-toggle__input" type="checkbox" />
+      </label>
+      <label class="e-toggle e-toggle--inverted e-toggle---focus e-mt-16" role="switch">
+        Focus
+        <input class="e-toggle__input" type="checkbox" />
       </label>
     </div>
   </body>
