--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -8203,6 +8203,23 @@ input:focus {
   width: 100%;
 }
 
+.e-sr-only {
+  position: absolute !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
+  /* 3 */
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  /* 1 */
+  clip-path: inset(50%) !important;
+  /* 2 */
+  -webkit-clip-path: inset(50%) !important;
+  height: 1px !important;
+  width: 1px !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  border: 0 !important;
+}
+
 .e-border-none {
   border: none;
 }
