--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -1,7 +1,7 @@
 <ng-template #changelogTemplate>
   <table>
-    <caption class="sr-only">Component changes</caption>
-    <tr class="sr-only">
+    <caption class="e-sr-only">Component changes</caption>
+    <tr class="e-sr-only">
       <th class="changelog-date py-0" scope="col">Date and version</th>
       <th class="changelog-content py-0" scope="col">Changes</th>
     </tr>
