Initial prop changes for carousel

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -98,7 +98,7 @@
       <div slot="title-1">
         <h3 class="e-title-sm">title 1</h3>
       </div>
-      <div slot="element-1">
+      <div slot="item-1">
         <img
           alt="Carousel example image"
           src="../../../../assets/carousel/el1.jpeg"
@@ -108,7 +108,7 @@
       <div slot="title-2">
         <h3 class="e-title-sm">title 2</h3>
       </div>
-      <div slot="element-2">
+      <div slot="item-2">
         <img
           alt="Carousel example image"
           src="../../../../assets/carousel/el2.jpeg"
