--- a/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
@@ -33,12 +33,12 @@
   <!--IMPLEMENTATION-->
   <app-component-section [sectionTitle]="'Implementation'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-subsection [sectionTitle]="'Elements'">
+      <app-component-subsection [sectionTitle]="'Items'">
         <ng-container ngProjectAs="sectionContent">
-          If you want to have more control over the elements, you can send just the number of elements in to
-          the carousel instead of a list of elements/slots. This will only show the carousel with the correct
-          number of steps. If you choose to use only the carousel, without sending in elements, you have to
-          add the animation for elements sliding out and fading in yourself.
+          If you want to have more control over the items, you can send just the number of items in to the
+          carousel instead of a list of items/slots. This will only show the carousel with the correct number
+          of steps. If you choose to use only the carousel, without sending in items, you have to add the
+          animation for items sliding out and fading in yourself.
         </ng-container>
       </app-component-subsection>
     </ng-container>
