--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6222,6 +6222,11 @@ input:focus {
   display: flex;
   flex-direction: row;
 }
+.e-stepper__step-header {
+  border: 0;
+  background: transparent;
+  padding: 0px;
+}
 .e-stepper__step-number {
   font-family: "Red Hat Display", Verdana, sans-serif;
   font-weight: 700;
