--- a/packages/elvis/src/components/stepper.scss
+++ b/packages/elvis/src/components/stepper.scss
@@ -14,6 +14,12 @@
     display: flex;
     flex-direction: row;
 
+    &-header {
+      border: 0;
+      background: transparent;
+      padding: 0px;
+    }
+
     &-number {
       font-family: 'Red Hat Display', Verdana, sans-serif;
       font-weight: 700;
